# ts3plugin-cmake-template

./: .gitignore  CMakeLists.txt  README.md
